--- a/app/src/main/res/drawable/image_round.xml
+++ b/app/src/main/res/drawable/image_round.xml
@@ -5,7 +5,7 @@
     android:shape="ring"
     android:thicknessRatio="2.5"
     android:useLevel="false">
-    <solid android:color="@color/colorDivider"/>
+    <solid android:color="@color/colorText"/>
 
     <stroke
         android:width="2dp"
