--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -27,6 +27,7 @@
         android:fontFamily="@font/architects_daughter"
         android:text="Kokwet Connect"
         android:textAlignment="center"
+        android:textColor="@color/colorTextPrimary"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
