--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,16 +17,17 @@
 
     <ImageView
         android:id="@+id/img_logo"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:src="@drawable/logo"/>
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/logo" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Welcome, back"
-        android:textSize="40sp"
         android:fontFamily="@font/architects_daughter"
-        android:textColor="#000"/>
+        android:text="Welcome, back"
+        android:textColor="#000"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/tv_signin"
