--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
         <item>@font/antic</item>
         <item>@font/architects_daughter</item>
+        <item>@font/kanit</item>
+        <item>@font/righteous</item>
     </array>
 </resources>
