--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/antic</item>
         <item>@font/architects_daughter</item>
         <item>@font/kanit</item>
+        <item>@font/patua_one</item>
         <item>@font/righteous</item>
     </array>
 </resources>
